# FORK_context-fabric

./: .gitignore  CHANGELOG.md  LICENSE  README.md  corpus-distribution-plan.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: compare_performance.py
benchmarks/results/: results.csv
docs/api/: index.json
docs/intro-to-cf/: Makefile  intro-to-cf.tex
docs/memory-benchmark/: 2025-01-memory-benchmark-tf-vs-cf.tex
libs/benchmarks/: CHANGELOG.md  README.md  pyproject.toml
libs/benchmarks/benchmark_results/2026-01-08_221127/: latency_raw.csv  latency_statistics.csv  patterns.json
libs/benchmarks/benchmark_results/2026-01-08_221518/: latency_raw.csv  latency_statistics.csv  patterns.json
libs/benchmarks/benchmark_results/2026-01-08_234531/: config.json  environment.json
libs/benchmarks/benchmark_results/2026-01-09_004429/: cross_corpus_summary.csv  memory_raw_bhsa.csv  memory_raw_cuc.csv  memory_summary.csv
libs/benchmarks/benchmark_results/2026-01-09_010745/: latency_raw.csv  latency_statistics.csv
libs/benchmarks/benchmark_results/2026-01-09_032632/: config.json  environment.json
libs/benchmarks/benchmark_results/2026-01-09_032632/memory/: raw_bhsa.csv  raw_cuc.csv
libs/benchmarks/benchmark_results/2026-01-09_032952/: config.json  environment.json
libs/benchmarks/benchmark_results/2026-01-09_032952/latency/: queries.json  raw_measurements.csv  statistics.csv
libs/benchmarks/benchmark_results/2026-01-09_032952/memory/: cross_corpus_summary.csv  raw_bhsa.csv  raw_cuc.csv  raw_dss.csv  raw_lxx.csv  raw_n1904.csv  raw_peshitta.csv  raw_quran.csv  raw_sp.csv  raw_syrnt.csv  raw_tischendorf.csv  summary.csv
libs/benchmarks/benchmark_results/2026-01-09_032952/progressive/: raw_steps.csv  scaling_analysis.json
libs/benchmarks/cfabric_benchmarks/: __init__.py  cli.py
libs/benchmarks/cfabric_benchmarks/analysis/: __init__.py  comparison.py  statistics.py
libs/benchmarks/cfabric_benchmarks/corpora/: __init__.py  download.py  validate.py
libs/benchmarks/cfabric_benchmarks/generators/: __init__.py  validator.py
libs/benchmarks/cfabric_benchmarks/models/: __init__.py  config.py  environment.py  latency.py  memory.py  progressive.py  statistics.py
libs/benchmarks/cfabric_benchmarks/output/: __init__.py  csv_writer.py  loaders.py  metadata.py
libs/benchmarks/cfabric_benchmarks/queries/: __init__.py  curated.py
libs/benchmarks/cfabric_benchmarks/runners/: __init__.py  base.py  isolation.py  latency.py  memory.py  progressive.py
libs/benchmarks/cfabric_benchmarks/visualization/: __init__.py  charts.py  reports.py
libs/benchmarks/findings/2026-01-benchmark-analysis/: benchmark-analysis.md  nonlinear-scaling-analysis.md
libs/benchmarks/findings/benchmarking-article/: 2025-01-memory-benchmark-tf-vs-cf.tex  Makefile  feedback.md
libs/benchmarks/findings/embedding-preloading/: benchmark_embedding_cf_vs_tf.py  embedding_preloading.md
libs/benchmarks/findings/vectorized-feature-lookup/: simulation_looping_vs_vectorized.py  simulation_results.json  vectorized_feature_lookup.md
libs/benchmarks/tests/: conftest.py
libs/benchmarks/tests/unit/: test_models.py  test_output.py  test_statistics.py
libs/core/: CHANGELOG.md  README.md  pyproject.toml
libs/core/cfabric/: __init__.py  describe.py  results.py  types.py
libs/core/cfabric/core/: __init__.py  api.py  config.py  fabric.py
libs/core/cfabric/downloader/: __init__.py  download.py  paths.py  registry.py
libs/core/cfabric/features/: __init__.py  computed.py  edge.py  node.py
libs/core/cfabric/features/warp/: __init__.py  oslots.py  otype.py
libs/core/cfabric/io/: __init__.py  compiler.py  loader.py
libs/core/cfabric/navigation/: __init__.py  locality.py  nodes.py  text.py
libs/core/cfabric/precompute/: __init__.py  prepare.py
libs/core/cfabric/search/: graph.py  relations.py  search.py  searchexe.py  semantics.py  spin.py  stitch.py  syntax.py
libs/core/cfabric/storage/: __init__.py  csr.py  mmap_manager.py  string_pool.py
libs/core/cfabric/utils/: __init__.py  cli.py  files.py  helpers.py  logging.py  timestamp.py
libs/core/tests/fixtures/edge_cases/: empty.tf  single_node.tf  unicode.tf
libs/core/tests/fixtures/invalid/: bad_valueType.tf  corrupt_data.tf  missing_header.tf
libs/core/tests/fixtures/mini_corpus/: number.tf  phrase_id.tf  pos.tf  relation.tf  score.tf  sentence_id.tf  word.tf
libs/core/tests/integration/: __init__.py  conftest.py  test_compile.py  test_computed.py  test_describe.py  test_features.py  test_loading.py  test_locality.py  test_nodes.py  test_search.py
libs/core/tests/integration/io/: test_compile.py
libs/core/tests/unit/: __init__.py  conftest.py  test_command.py  test_csr.py  test_data.py  test_describe.py  test_edgefeature.py  test_files.py  test_generic.py  test_helpers.py  test_mmap.py  test_nodefeature.py  test_nodes.py  test_oslotsfeature.py  test_otypefeature.py  test_results.py  test_strings.py  test_timestamp.py
libs/core/tests/unit/io/: test_loader.py
libs/core/tests/unit/search/: __init__.py  test_search.py  test_syntax.py
libs/core/tests/unit/storage/: test_csr.py
libs/core/tests/unit/utils/: test_logging.py
libs/mcp/: CHANGELOG.md  README.md  pyproject.toml
libs/mcp/cfabric_mcp/: __init__.py  cache.py  corpus_manager.py  resources.py  server.py  tools.py
libs/mcp/docs/: tool-call-examples.md
libs/mcp/tests/: __init__.py  test_cache.py  test_tools.py
libs/mcp/tests/fixtures/mini_corpus/: distance.tf  oslots.tf  otext.tf  otype.tf  parent.tf
libs/mcp/tests/fixtures/mini_corpus_b/: oslots.tf  otype.tf  phrase_id.tf  pos.tf  sentence_id.tf  word.tf
libs/mcp/tests/fixtures/mini_corpus_c/: oslots.tf  otype.tf  phrase_id.tf  pos.tf  sentence_id.tf  word.tf
libs/mcp/tests/integration/: conftest.py  test_corpus_info.py  test_multi_corpus.py  test_new_tools.py  test_search.py  test_search_return_types.py
notebooks/: test-bhsa.ipynb
site/src/app/: layout.tsx
site/src/app/docs/: layout.tsx
site/src/app/docs/mcp/: page.mdx
site/src/lib/: docs.ts
tests/integration_tests/: test_compile.py
(+9 files in other folders)
