[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-fabric"
version = "0.1.0"
description = "Graph-based corpus engine for annotated text with efficient traversal and search"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Cody Kingham"},
    {name = "Dirk Roorda"},
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = [
    "text",
    "linguistics",
    "annotation",
    "corpus",
    "graph",
]
dependencies = [
    "numpy>=1.26",
    "pyyaml>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "tox",
]

[project.urls]
Homepage = "https://github.com/codykingham/context-fabric"
Repository = "https://github.com/codykingham/context-fabric"
Issues = "https://github.com/codykingham/context-fabric/issues"

[tool.setuptools.packages.find]
where = ["packages"]

[tool.setuptools.package-dir]
"" = "packages"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
