[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "context-fabric-workspace"
version = "0.0.0"
description = "Context-Fabric monorepo workspace"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "tox",
    "mypy>=1.8",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["libs/core/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
check_untyped_defs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["yaml", "yaml.*"]
ignore_missing_imports = true
