[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfabric-benchmarks"
version = "0.1.0"
description = "Comprehensive benchmarking suite for Context-Fabric vs Text-Fabric"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Cody Kingham"},
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "context-fabric>=0.4.0",
    "text-fabric>=12.0",
    "pydantic>=2.0",
    "click>=8.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "psutil>=5.9",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
cfabric-bench = "cfabric_benchmarks.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cfabric_benchmarks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py313"
